# nancy

./: .gitignore  LICENSE  Main.hs  README.md  auditedComputation.cabal  gen.sh  nancy.cabal  stack.yaml
app/: Main.hs
examples/: auditedComp.nc  auditedComp.txt  auditedComp2.txt  auditedUnit.txt  audited_addition.nc  bang.nc  church_pair.nc  count_app.nc  count_computation.nc  inspect.nc  let.nc  let2.nc  let_func.nc  simple_if.nc  trailInspection.nc  trailInspection.txt
examples/thesis/: example1.nc  example2.nc  example3.nc  example4.nc  example5.nc
src/: Env.hs  Language.hs  Main.hs  Nancy.hs  PreludeExtensions.hs  Proof.hs  Trail.hs  Typechecker.hs  Types.hs  Util.hs
src/AudiComp/: Helper.hs  Interpreter.hs  Typechecker.hs
src/AudiComp/Core/: Env.hs  Errors.hs  Language.hs  PreludeExtensions.hs  Types.hs  Util.hs
src/AudiComp/Core/Errors/: Interpreter.hs  Typechecker.hs
src/Context/: Truth.hs
src/Nancy/: Helper.hs  Interpreter.hs  Lexer.x  Parser.y  Typechecker.hs
src/Nancy/Core/: Env.hs  Errors.hs  Language.hs  Output.hs  Util.hs
src/Nancy/Core/Errors/: Interpreter.hs  Typechecker.hs
test/: Test.hs
test/Test/Unit/: Interpreter.hs  Typechecker.hs
tests/: Test.hs
