name:                nancy
version:             0.1.0.0
synopsis:            A programming langauge supporting computational provenance
description:         A lexer, parser, typechecker and interpreter for a programming
                     language supporting computational provenance.
license:             MIT
license-file:        LICENSE
author:              Jason Gardella
maintainer:          jason.a.gardella@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jgardella/nancy.git

library
  hs-source-dirs:
    src
  exposed-modules:
    Nancy
  other-modules:
    Nancy.Parser,
    Nancy.Lexer,
    Nancy.Typechecker,
    Nancy.Interpreter,
    Nancy.Core.Env,
    Nancy.Core.Language,
    Nancy.Core.Util,
    Nancy.Core.Output,
    Nancy.Core.Errors.Typechecker,
    Nancy.Core.Errors.Interpreter
  build-depends:
    base >=4.9 && <4.10,
    array >=0.5 && <0.6,
    containers >=0.5 && <0.6,
    pretty,
    mtl
  build-tools:
    alex,
    happy
  default-language:
    Haskell2010
  default-extensions:
    RecordWildCards

executable nancy
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    base >=4.9 && <4.10,
    optparse-applicative,
    nancy,
    pretty
  default-language:
    Haskell2010
